[gd_scene load_steps=17 format=2]

[ext_resource path="res://weapon/rpg/Rocket.gd" type="Script" id=1]
[ext_resource path="res://weapon/rpg/rocket.png" type="Texture" id=2]
[ext_resource path="res://weapon/dynamite/dynamite explosion.png" type="Texture" id=3]
[ext_resource path="res://weapon/rpg/xplode_2.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 38.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 3.0
height = 42.0

[node name="Rocket" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Explosions" type="YSort" parent="."]

[node name="Explosion1" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( -25, -11 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion1"]
position = Vector2( 25, 11 )
stream = ExtResource( 4 )

[node name="Explosion2" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( -10, -11 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion2"]
position = Vector2( 10, 11 )
stream = ExtResource( 4 )

[node name="Explosion3" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( 5, -11 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion3"]
position = Vector2( -5, 11 )
stream = ExtResource( 4 )

[node name="Explosion4" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( 20, -11 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion4"]
position = Vector2( -20, 11 )
stream = ExtResource( 4 )

[node name="Explosion5" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( -15, -17 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion5"]
position = Vector2( 15, 17 )
stream = ExtResource( 4 )

[node name="Explosion6" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( 1, -18 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion6"]
position = Vector2( -1, 18 )
stream = ExtResource( 4 )

[node name="Explosion7" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( 16, -17 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion7"]
position = Vector2( -16, 17 )
stream = ExtResource( 4 )

[node name="Explosion8" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( -6, -20 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion8"]
position = Vector2( 6, 20 )
stream = ExtResource( 4 )

[node name="Explosion9" type="AnimatedSprite" parent="Explosions"]
visible = false
position = Vector2( 10, -20 )
scale = Vector2( 1, 0.84375 )
frames = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosions/Explosion9"]
position = Vector2( -10, 23.7037 )
scale = Vector2( 1, 1.18519 )
stream = ExtResource( 4 )
max_distance = 200.0

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
rotation = 1.5708
shape = SubResource( 12 )
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
